# findora-agentd

./: .gitignore  Cargo.toml
configs/qa01/tendermint/config/: addrbook.json  config.toml  genesis.json  node_key.json  priv_validator_key.json
findora/: Cargo.toml
findora/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  profiler.rs  utils.rs
findora/src/commands/: mod.rs
scripts/: common.sh  fetch_block.sh  multi_test.sh  node_init_qa01.sh  node_init_testnet.sh  qa01_init.sh  samples.sh  utxo_txn_test.sh
web3/: Cargo.toml
web3/examples/output/: ERC20.opcode
