[package]
name = "feth"
version = "0.1.0"
description = "Ethereum tools for Findora Network"
authors = ["FindoraNetwork"]
edition = "2021"

[dependencies]
web3 = { path = "../web3"}
tokio = { version = "1.14" }
secp256k1 = { version = "0.20", features = ["recovery"]}
bip0039 = "0.10.1"
bip32 = "0.3.0"
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
hex = "0.4.3"
eth_checksum = "0.1.2"
sha3 = "0.10.0"