[package]
name = "feth"
version = "0.1.0"
description = "Ethereum tools for Findora Network"
authors = ["FindoraNetwork"]
edition = "2021"

[dependencies]
web3 = { git = "https://github.com/simonjiao/rust-web3.git", branch = "findora" }
tokio = { version = "1.14" }
secp256k1 = { version = "0.21", features = ["recovery"]}
bip0039 = "0.10.1"
bip32 = "0.3.0"
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
hex = "0.4.3"
eth_checksum = "0.1.2"
sha3 = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rayon = "1.5"
num_cpus = "1.13.1"
clap = {version = "3.1", features = ["derive"]}
url = {version = "2.2.2", features = ["serde"]}
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
log = { version ="0.4.16", features = ["std", "serde"] }
env_logger = "0.9.0"
chrono = "0.4.19"
redis = { version = "0.21.5", features =[ "default", "tokio-comp" ] }
derive_more = "0.99.17"
