[package]
authors = ["FindoraNetwork"]
description = "Ethereum tools for Findora Network"
edition = "2021"
name = "feth"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
bip0039 = "0.10.1"
bip32 = "0.3.0"
chrono = "0.4.19"
clap = {version = "3.1", features = ["derive"]}
derive_more = "0.99.17"
env_logger = "0.9.0"
eth_checksum = "0.1.2"
hex = "0.4.3"
lazy_static = "1.4.0"
libsecp256k1 = {version = "0.5", features = ["static-context", "hmac"]}
log = {version = "0.4.16", features = ["std", "serde"]}
num_cpus = "1.13.1"
rayon = "1.5"
redis = {version = "0.21.5", features = ["default", "tokio-comp"]}
reqwest = {version = "0.11", default-features = false, features = ["blocking", "json"]}
secp256k1 = {version = "0.21", features = ["recovery"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha3 = "0.10.0"
tokio = {version = "1.14"}
url = {version = "2.2.2", features = ["serde"]}
web3 = {git = "https://github.com/simonjiao/rust-web3.git", branch = "findora", features = ["signing"]}
